--- a/index.html
+++ b/index.html
@@ -873,10 +873,10 @@
 
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
               <form
-                action="forms/contact.php"
-                method="post"
+                onsubmit="sendMail()"
+                id="contact-role"
                 role="form"
-                class="php-email-form"
+                class="email-form"
               >
                 <div class="row">
                   <div class="form-group col-md-6">
@@ -923,11 +923,13 @@
                   <div class="loading">Loading</div>
                   <div class="error-message"></div>
                   <div class="sent-message">
-                    Your message has been sent. Thank you!
+                    Tu mensaje ha sido enviado, muchas gracias!
                   </div>
                 </div>
                 <div class="text-center">
-                  <button type="submit">Send Message</button>
+                  <button type="submit" onclick="return false">
+                    Send Message
+                  </button>
                 </div>
               </form>
             </div>
@@ -971,7 +973,9 @@
     <script src="assets/vendor/typed.js/typed.umd.js"></script>
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
-
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://unpkg.com/smtp.js/dist/smtp.min.js"></script>
+    <script type="module" src="js/javascript.js"></script>
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
   </body>
