--- a/index.html
+++ b/index.html
@@ -872,12 +872,7 @@
             </div>
 
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-              <form
-                onsubmit="sendMail()"
-                id="contact-role"
-                role="form"
-                class="email-form"
-              >
+              <form id="contact-role" role="form" class="email-form">
                 <div class="row">
                   <div class="form-group col-md-6">
                     <label for="name">Your Name</label>
@@ -927,9 +922,7 @@
                   </div>
                 </div>
                 <div class="text-center">
-                  <button type="submit" onclick="return false">
-                    Send Message
-                  </button>
+                  <button type="submit">Send Message</button>
                 </div>
               </form>
             </div>
@@ -973,8 +966,7 @@
     <script src="assets/vendor/typed.js/typed.umd.js"></script>
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script src="https://unpkg.com/smtp.js/dist/smtp.min.js"></script>
+
     <script type="module" src="js/javascript.js"></script>
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
