--- a/index.html
+++ b/index.html
@@ -83,26 +83,26 @@
                 ><i class="bx bx-home"></i> <span>Home</span></a
               >
             </li>
-            <li>
+            <!-- <li>
               <a href="#about" class="nav-link scrollto"
                 ><i class="bx bx-user"></i> <span>Sobre mí</span></a
               >
-            </li>
+            </li> -->
             <li>
               <a href="#resume" class="nav-link scrollto"
                 ><i class="bx bx-file-blank"></i> <span>Curriculum</span></a
               >
             </li>
-            <li>
+            <!-- <li>
               <a href="#portfolio" class="nav-link scrollto"
                 ><i class="bx bx-book-content"></i> <span>Portfolio</span></a
               >
-            </li>
-            <li>
+            </li> -->
+            <!--  <li>
               <a href="#services" class="nav-link scrollto"
                 ><i class="bx bx-server"></i> <span>Services</span></a
               >
-            </li>
+            </li>-->
             <li>
               <a href="#contact" class="nav-link scrollto"
                 ><i class="bx bx-envelope"></i> <span>Contacto</span></a
@@ -126,7 +126,7 @@
           Soy
           <span
             class="typed"
-            data-typed-items="Designer, Developer, Freelancer, Photographer"
+            data-typed-items="Diseñador, Creativa, Soñador"
           ></span>
         </p>
       </div>
@@ -134,7 +134,7 @@
     <!-- End Hero -->
 
     <main id="main">
-      <!-- ======= About Section ======= -->
+      <!-- ======= About Section ======= --
       <section id="about" class="about">
         <div class="container">
           <div class="section-title">
@@ -213,9 +213,9 @@
           </div>
         </div>
       </section>
-      <!-- End About Section -->
+      -- End About Section -->
 
-      <!-- ======= Facts Section ======= -->
+      <!-- ======= Facts Section ======= --
       <section id="facts" class="facts">
         <div class="container">
           <div class="section-title">
@@ -298,7 +298,7 @@
           </div>
         </div>
       </section>
-      <!-- End Facts Section -->
+      -- End Facts Section -->
 
       <!-- ======= Skills Section ======= -->
       <section id="skills" class="skills section-bg">
@@ -306,58 +306,15 @@
           <div class="section-title">
             <h2>Skills</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Manejo el paquete de office y esoy muy relacionada con sistema de
+              gestion de información y digitalización.
             </p>
           </div>
 
           <div class="row skills-content">
             <div class="col-lg-6" data-aos="fade-up">
               <div class="progress">
-                <span class="skill">HTML <i class="val">100%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="100"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">CSS <i class="val">90%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="90"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-
-              <div class="progress">
-                <span class="skill">JavaScript <i class="val">75%</i></span>
-                <div class="progress-bar-wrap">
-                  <div
-                    class="progress-bar"
-                    role="progressbar"
-                    aria-valuenow="75"
-                    aria-valuemin="0"
-                    aria-valuemax="100"
-                  ></div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <div class="progress">
-                <span class="skill">PHP <i class="val">80%</i></span>
+                <span class="skill">Excel <i class="val">80%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -370,12 +327,27 @@
               </div>
 
               <div class="progress">
-                <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+                <span class="skill">Word <i class="val">80%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="90"
+                    aria-valuenow="80"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+              <div class="progress">
+                <span class="skill">Power Point <i class="val">65%</i></span>
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="65"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
@@ -383,7 +355,7 @@
               </div>
 
               <div class="progress">
-                <span class="skill">Photoshop <i class="val">55%</i></span>
+                <span class="skill">Canva <i class="val">55%</i></span>
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
@@ -399,108 +371,153 @@
         </div>
       </section>
       <!-- End Skills Section -->
+      <!-- ======= Languages Section ======= -->
+      <section id="languages" class="skills section-bg">
+        <div class="container">
+          <div class="section-title">
+            <h2>Idiomas</h2>
+            <p>
+              Me gustan los idiomas, en especial las lenguas romances, sigo en
+              estudiando idiomas como hobby y forma de entender las culturas de
+              otros paises.
+            </p>
+          </div>
 
+          <div class="row skills-content">
+            <div class="col-lg-6" data-aos="fade-up">
+              <div class="progress">
+                <span class="skill">Inglés <i class="val">A2</i></span>
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="60"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Portugués <i class="val">A2</i></span>
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="60"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+              <div class="progress">
+                <span class="skill">Italiano <i class="val">A1</i></span>
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="20"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill">Francés <i class="val">A1</i></span>
+                <div class="progress-bar-wrap">
+                  <div
+                    class="progress-bar"
+                    role="progressbar"
+                    aria-valuenow="20"
+                    aria-valuemin="0"
+                    aria-valuemax="100"
+                  ></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Languages Section -->
       <!-- ======= Resume Section ======= -->
       <section id="resume" class="resume">
         <div class="container">
           <div class="section-title">
-            <h2>Resume</h2>
+            <h2>Curriculum</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Trabajo de forma ágil, con mucha adaptabilidad capaz de manejar
+              situaciones inesperada y con paciencia ante las situaciones
+              comprometedoras.<br /><br />
+              Me gusta ser honesta y transparente para demostrar una verdadera
+              personalidad, y tener un entorno de trabajo tranquilo y solidario
             </p>
           </div>
 
           <div class="row">
             <div class="col-lg-6" data-aos="fade-up">
-              <h3 class="resume-title">Sumary</h3>
+              <h3 class="resume-title">Resumen</h3>
               <div class="resume-item pb-0">
                 <h4>Jessica Velasquéz</h4>
                 <p>
                   <em
-                    >Innovative and deadline-driven Graphic Designer with 3+
-                    years of experience designing and developing user-centered
-                    digital/print marketing material from initial concept to
-                    final, polished deliverable.</em
+                    >Me gusta aprender nuevas cosas y realizar activadades
+                    desafiantes, comprender el ambiente y emprender el viaje a
+                    nuevos horizontes más allá de la imaginación</em
                   >
                 </p>
                 <ul>
-                  <li>Portland par 127,Orlando, FL</li>
-                  <li>(123) 456-7891</li>
-                  <li>alice.barkley@example.com</li>
+                  <li>Heredia, Costa Rica</li>
+                  <li>jesshervela@gmail.com</li>
                 </ul>
               </div>
 
-              <h3 class="resume-title">Education</h3>
+              <h3 class="resume-title">Educación</h3>
               <div class="resume-item">
-                <h4>Master of Fine Arts &amp; Graphic Design</h4>
-                <h5>2015 - 2016</h5>
-                <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                <p>
-                  Qui deserunt veniam. Et sed aliquam labore tempore sed
-                  quisquam iusto autem sit. Ea vero voluptatum qui ut
-                  dignissimos deleniti nerada porti sand markend
-                </p>
-              </div>
-              <div class="resume-item">
-                <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-                <h5>2010 - 2014</h5>
-                <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                <p>
-                  Quia nobis sequi est occaecati aut. Repudiandae et iusto quae
-                  reiciendis et quis Eius vel ratione eius unde vitae rerum
-                  voluptates asperiores voluptatem Earum molestiae consequatur
-                  neque etlon sader mart dila
-                </p>
+                <h4>Bachillerato de secundaria</h4>
+                <h5>2016</h5>
+                <p><em>Instituto Enrique Flores Guevara</em></p>
+                <p>Bachiller en Ciencias y Letras</p>
               </div>
             </div>
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="resume-title">Professional Experience</h3>
+              <h3 class="resume-title">Experiencia Profesional</h3>
               <div class="resume-item">
-                <h4>Senior graphic design specialist</h4>
-                <h5>2019 - Present</h5>
-                <p><em>Experion, New York, NY </em></p>
+                <h4>Operario</h4>
+                <h5>Septiembre - Octubre 2023</h5>
+                <p><em>Compañía Nacional de Chocolate</em></p>
                 <ul>
                   <li>
-                    Lead in the design, development, and implementation of the
-                    graphic, layout, and production communication materials
-                  </li>
-                  <li>
-                    Delegate tasks to the 7 members of the design team and
-                    provide counsel on all aspects of the project.
-                  </li>
-                  <li>
-                    Supervise the assessment of all graphic materials in order
-                    to ensure quality and accuracy of the design
-                  </li>
-                  <li>
-                    Oversee the efficient use of production project budgets
-                    ranging from $2,000 - $25,000
+                    Asistencia primeriza de operario para mantenimiento de
+                    Maquinaría, y empacadora de línea de productos detallados.
                   </li>
                 </ul>
               </div>
               <div class="resume-item">
-                <h4>Graphic design specialist</h4>
-                <h5>2017 - 2018</h5>
-                <p><em>Stepping Stone Advertising, New York, NY</em></p>
+                <h4>Staff</h4>
+                <h5>Junio - Septiembre 2023</h5>
+                <p><em>Nítidos</em></p>
                 <ul>
                   <li>
-                    Developed numerous marketing programs (logos,
-                    brochures,infographics, presentations, and advertisements).
+                    Ejercí labores diversos, cómo limpieza, digitalización de
+                    archivos, bodega y trabajo en línea de empaque-taje de
+                    Compañía Nacional de Chocolates
                   </li>
+                </ul>
+              </div>
+              <div class="resume-item">
+                <h4>Servicio al cliente y Centro de Venta</h4>
+                <h5>Agosto - Octubre 2022</h5>
+                <p><em>Idiomas CR</em></p>
+                <ul>
                   <li>
-                    Managed up to 5 projects or tasks at a given time while
-                    under pressure
-                  </li>
-                  <li>
-                    Recommended and consulted with clients on the most
-                    appropriate graphic design
-                  </li>
-                  <li>
-                    Created 4+ design presentations and proposals a month for
-                    clients and account managers
+                    Gestionaba la interacción con clientes, promoviendo
+                    activamente servicios educativos de idiomas dirigidos a
+                    adolescentes y adultos, asegurando la efectiva contratación
+                    de los mismos.
                   </li>
                 </ul>
               </div>
@@ -510,7 +527,7 @@
       </section>
       <!-- End Resume Section -->
 
-      <!-- ======= Portfolio Section ======= -->
+      <!-- ======= Portfolio Section ======= --
       <section id="portfolio" class="portfolio section-bg">
         <div class="container">
           <div class="section-title">
@@ -739,9 +756,9 @@
           </div>
         </div>
       </section>
-      <!-- End Portfolio Section -->
+      -- End Portfolio Section -->
 
-      <!-- ======= Services Section ======= -->
+      <!-- ======= Services Section ======= --
       <section id="services" class="services">
         <div class="container">
           <div class="section-title">
@@ -826,7 +843,7 @@
           </div>
         </div>
       </section>
-      <!-- End Services Section -->
+      -- End Services Section -->
 
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact">
@@ -834,10 +851,9 @@
           <div class="section-title">
             <h2>Contacto</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Puedes contactarme por medio de mi correo electrónico, y con gusto
+              le atenderé, tambie hacer uso del formulario para que su contacto
+              quede registrado en el sistema con gusto.
             </p>
           </div>
 
@@ -872,7 +888,12 @@
             </div>
 
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-              <form id="contact-role" role="form" class="email-form">
+              <form
+                id="contact-role"
+                role="form"
+                class="php-email-form"
+                action="post"
+              >
                 <div class="row">
                   <div class="form-group col-md-6">
                     <label for="name">Your Name</label>
