--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                 <h4>Jessica Velasquéz</h4>
                 <p>
                   <em
-                    >Me gusta aprender nuevas cosas y realizar activadades
+                    >Me gusta aprender nuevas cosas y realizar actividades
                     desafiantes, comprender el ambiente y emprender el viaje a
                     nuevos horizontes más allá de la imaginación</em
                   >
